--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.14.0",
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
+    "mysql": "^2.11.1",
     "sequelize": "^2.0.0-rc1",
     "sequelize-cli": "^2.4.0",
     "serve-favicon": "~2.3.0",
