--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
   "dependencies": {
     "body-parser": "~1.15.2",
     "cookie-parser": "~1.4.3",
+    "csv-parse": "^1.1.7",
     "debug": "~2.2.0",
     "express": "~4.14.0",
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
     "mysql": "^2.11.1",
-    "sequelize": "^2.0.0-rc1",
+    "sequelize": "^2.1.3",
     "sequelize-cli": "^2.4.0",
     "serve-favicon": "~2.3.0",
-    "sqlite3": "^3.1.8"
+    "sqlite3": "^3.1.8",
+    "yargs": "^6.4.0"
   }
 }
